Update translation - 105284181 (#3923) fb53715b09c40921675c540a53b0233e8b346446

--- a/ar/vaccines/index.html
+++ b/ar/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اللقاحات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:02 م الساعة 25 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:13 م الساعة 30 مارس 2021</p>
           
         </div>
       </div>
@@ -638,7 +638,7 @@
 
 
 
-<p>في البداية كان التطعيم مقتصرًا على العاملين في مجال الرعاية الصحية والمقيمين في الرعاية الطويلة الأجل. وبالتالي فإن البيانات تعكس هؤلاء السكان أكثر من غيرهم من بقية المقيمين كاليفورنيا.</p>
+<h3 id="Vaccine-administration-by-county-of-residence">توزيع اللقاح وإعطائه حسب مقاطعة الإقامة</h3>
 
 
 
@@ -646,29 +646,42 @@
 
 
 
-<h3 id="Vaccine-administration-by-county-of-residence">توزيع اللقاح وإعطائه حسب مقاطعة الإقامة</h3>
-
-
-
 <div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1615826330382" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublicv2/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublicv2/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublicv2/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1615826330382');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>
 
 
 
-<h3 class="pt-5">التطعيم والظروف الصحية المجتمعية (مقياس العدالة في توزيع اللقاح)</h3>
+<h3>التطعيم والظروف الصحية المجتمعية (مقياس العدالة في توزيع اللقاح)</h3>
 
-<p>ويوزان هذا الرسم البياني لقاحات كوفيد-19 بين أربعة مستويات مختلفة من صحة المجتمع. </p>
 
-<p>فهو يستخدم قياسات مؤشر الأماكن الصحية الخاص بتحالف الصحة العامة بجنوب كاليفورنيا في منطقة الرمز البريدي التي قد تؤثر على الصحة مثل الدخل والتعليم والحصول على الرعاية الصحية. ثم تُعطى المناطق درجة تتراوح من أقل الظروف الصحية للمجتمع (الربع رقم 1) إلى معظم الظروف الصحية للمجتمع (الربع رقم 4). يُقوم مقياس العدالة في توزيع اللقاح أيضًا بوضع درجات للمناطق التي ليس لديها نقاط على مؤشر الأماكن الصحية (HPI). </p><p>   وتُظهر البيانات أدناه التقدم المحرز في التطعيم في كل من الأرباع الأربعة. </p>
+
+<p>وتوزان هذه الرسومات البياني لقاحات كوفيد-19 بين أربعة مستويات مختلفة من صحة المجتمع.</p>
+
+
+
+<p>ومقياس العدالة في توزيع اللقاح يجمع بين قياسات مؤشر الأماكن الصحية الخاص بتحالف الصحة العامة بجنوب كاليفورنيا والدرجات/النقاط المستمدة من إدارة الصحة العامة بكاليفورنيا لتقييم العوامل التي قد تؤثر على الصحة مثل الدخل والتعليم والحصول على الرعاية الصحية. تتراوح الرموز البريدية من أقل الظروف الصحية للمجتمعات المحلية في الربع 1 إلى أعظم الظروف الصحية للمجتمعات المحلية في الربع 4.</p>
+
+
+
+<h4>النسبة المئوية الأسبوعية للأشخاص الذين تم تطعيمهم في الربع الواحد</h4>
+
+
+
+<div class="col-lg-10 mx-auto"> <!-- Tableau embed for "Weekly percent of vaccinated people by HPI quartile"--> <div class="tableauPlaceholder" id="viz1617137811229" style="position: relative"><noscript><a href="#"><img alt="لوحة بيانات مقياس العدالة في توزيع اللقاح " src="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1617137811229');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> <p class="small-text">ملاحظة: مقياس العدالة في توزيع اللقاح معد لتخصيص اللقاحات الأسبوعي ولأغراض إعداد التقارير فقط. لا ينبغي اعتبار الأرباع المستمدة من إدارة الصحة العامة بولاية كاليفورنيا دليلاً على نقاط مؤشر الأماكن الصحية (HPI) لهذه الرموز البريدية. ولقد تم تخصيص الأرباع المستمدة من إدارة الصحة العامة بولاية كاليفورنيا للرموز البريدية المستبعدة من نقاط مؤشر الأماكن الصحية (HPI) التي حققها تحالف الصحة العامة بجنوب كاليفورنيا بسبب المخاوف المتعلقة بالموثوقية والدقة الإحصائية في المجموعات السكانية الأصغر من 1500 شخص أو حيث يقيم أكثر من 50٪ من السكان في أي محيط جماعي.</p>
+</div>
+
+
+
+<h4>التطعيمات حسب العدد والنسبة المئوية للأشخاص الذين تم تطعيمهم في كل ربع حتى الآن </h4>
 
 
 
 <div class="container">
   <div class="row">       <cagov-chart-vaccines-hpi-by-people class="chart">         <ul class="d-none">
-          <li data-label="chartTitle">التطعيمات حسب عدد الأشخاص الذين تم تلقيحهم</li>
+          <li data-label="chartTitle">التطعيمات حسب عدد الأشخاص الذين تم تطعيمهم</li>
           <li data-label="chartDescription">الأشخاص الذين تم تطعيمهم جزئيًا وكليًّا في ولاية كاليفورنيا</li>
           <li data-label="legendLabel1">الأشخاص الذين يبلغون من العمر 16 عامًا فما فوق وتم تلقيحهم جزئيًّا</li>
           <li data-label="legendLabel2">الأشخاص الذين يبلغون من العمر 16 عامًا فما فوق وتم تلقيحهم بالكامل</li>
-          <li data-label="barLabel">أرباع مؤشر الأماكن الصحية {N}</li>
+          <li data-label="barLabel">الأرباع {N}</li>
           <li data-label="annotationLeast">أقل الظروف الصحية للمجتمعات المحلية</li>
           <li data-label="annotationMost">معظم الظروف الصحية للمجتمعات المحلية</li>
           <li data-label="footerText">تم التحديث في {PUBLISHED_DATE} ببيانات من {LATEST_ADMINISTERED_DATE}.  ويمثل "تلقيحهم جزئيًّا" الأفراد الذين تلقوا على الأقل جرعة واحدة من لقاح Pfizer/فايزر أو مودرنا/Moderna. ويمثل "تلقيحهم كليًّا" الأفراد الذين تلقوا جرعتين من لقاح Pfizer/فايزر أو مودرنا/Moderna أو جرعة لقاح يانسن/Janssen. يتم احتساب النسبة المئوية لعدد الأشخاص الذين تم تلقيحهم في أحد الأرباع مقسومًا على عدد السكان الذين تبلغ أعمارهم 16 فما فوق في أحد الأرباع.</li>
@@ -677,7 +690,7 @@
           <li data-label="chartTitle">التطعيمات بحسب الجرعات التي تم إعطائها</li>
           <li data-label="chartDescription">عدد جرعات اللقاح المُعطاة في كاليفورنيا</li>
           <li data-label="legendLabel1">النسبة المئوية لإجمالي الجرعات المُعطاة وعددها</li>
-          <li data-label="barLabel">أرباع مؤشر الأماكن الصحية {N}</li>
+          <li data-label="barLabel">الأرباع {N}</li>
           <li data-label="annotationLeast">أقل الظروف الصحية للمجتمعات المحلية</li>
           <li data-label="annotationMost">معظم الظروف الصحية للمجتمعات المحلية</li>
           <li data-label="footerText">تم التحديث في {PUBLISHED_DATE} ببيانات من {LATEST_ADMINISTERED_DATE}. وتُستثنى الجرعات التي لم تحصل على نقاط مؤشر الأماكن الصحية، بما في ذلك المقيمين خارج الولاية أو السجلات التي فُقدت رموزها البريدية. النسبة المئوية للجرعات المحسوبة كجرعات معطاة في أحد الأرباع مقسومة على مجموع الجرعات الإجمالية المُعطاة على مستوى الولاية.</li>
