--- a/tl/vaccines/index.html
+++ b/tl/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Bakuna</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 25, 2021 sa 5:02 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 30, 2021 sa 4:13 PM</p>
           
         </div>
       </div>
@@ -634,15 +634,7 @@
 
 
 
-<p>Sa mga dashboard na ito, ginagawang malinaw at maa-access ang data ng mga pagbabakuna sa lahat ng taga-California. Ina-update ang mga ito nang araw-araw.</p>
-
-
-
-<p>Sa simula, limitado ang pagpapabakuna sa mga manggagawa sa pangangalagang pangkalusugan at residente ng pangmatagalang pangangalaga. Kaya mas ipinapakita ng data ang mga populasyon na iyon kaysa sa iba pang mga residente ng California.</p>
-
-
-
-<p>Inuulat ng mga dashboard ang mga bakunang ibinibigay ng tinitirhang county. Kung saan hindi iniulat ang tinitirhang county, ang county kung saan ginamit ang pagbabakuna. Nalalapat ito sa hindi hihigit sa 1% ng mga talaan sa pagbabakuna. Ang kabuuan ng mga pagbabakuna sa county ay hindi katumbas ng kabuuang mga pagbabakuna sa buong estado dahil ang ilan sa mga residente na mula sa labas ng estado ay binabakunahan sa California.</p>
+<p>Sa mga dashboard na ito, ginagawang malinaw at maa-access ang data ng mga pagbabakuna sa lahat ng taga-California. Ina-update ang mga ito araw-araw.</p>
 
 
 
@@ -650,15 +642,36 @@
 
 
 
+<p>Inuulat ng dashboard na ito ang mga bakunang ibinibigay ng tinitirhang county. Kung saan hindi iniulat ang tinitirhang county, ang county kung saan ginamit ang pagbabakuna. Nalalapat ito sa hindi hihigit sa 1% ng mga talaan sa pagbabakuna. Ang kabuuan ng mga pagbabakuna sa county ay hindi katumbas ng kabuuang mga pagbabakuna sa buong estado dahil ang ilan sa mga residente na mula sa labas ng estado ay binabakunahan sa California.</p>
+
+
+
 <div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1615826330382" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublicv2/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublicv2/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublicv2/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1615826330382');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>
 
 
 
-<h3 class="pt-5">Pagbabakuna at mga kondisyong pangkalusugan ng komunidad (Vaccine Equity Metric)</h3>
+<h3>Pagbabakuna at mga kondisyong pangkalusugan ng komunidad (Vaccine Equity Metric)</h3>
 
-<p>Ikinukumpara sa graph na ito ang mga pagbabakuna laban sa COVID-19 sa apat na magkakaibang antas ng kalusugan ng komunidad. </p>
 
-<p>Ginagamit nito ang Index ng Mga Lugar na Malayo sa Sakit (HPI) ng Public Health Alliance of Southern California sa isang zip code area na puwedeng makaapekto sa kalusugan, gaya ng kita, edukasyon, at access sa pangangalagang pangkalusugan. Pagkatapos ay bibigyan ng score ang mga area, mula sa mga kondisyon ng komunidad na may pinaka-hindi maayos na kalusugan (Quartile 1) hanggang sa mga kondisyon ng komunidad na may pinakamaayos na kalusugan (Quartile 4). Ang Vaccine Equity Metric ay gumagawa rin ng mga score para sa mga area na walang HPI score. </p><p>   Ipinapakita ng data sa ibaba ang progreso ng pagbabakuna sa bawat isa sa apat na quartile. </p>
+
+<p>Ikinukumpara sa mga graph na ito ang mga pagbabakuna laban sa COVID-19 sa apat na magkakaibang antas ng kalusugan ng komunidad.</p>
+
+
+
+<p>Pinagsasama ng Sukatan sa Pagkakapantay-pantay sa Bakuna (Vaccine Equity Metric) ang sukat ng Index ng Mga Lugar na Malayo sa Sakit (HPI) ng Public Health Alliance of Southern California sa mga score na nakuha ng CDPH para matantya ang mga salik na puwedeng makaapekto sa kalusugan, gaya ng kita, edukasyon, at access sa pangangalagang pangkalusugan. Ang mga zip code ay mula sa hindi malulusog na kundisyon ng komunidad sa Quartile 1 hanggang sa mas malulusog na kundisyon ng komunidad sa Quartile 4.</p>
+
+
+
+<h4>Lingguhang porsyento ng mga taong nabakunahan ayon sa quartile</h4>
+
+
+
+<div class="col-lg-10 mx-auto"> <!-- Tableau embed for "Weekly percent of vaccinated people by HPI quartile"--> <div class="tableauPlaceholder" id="viz1617137811229" style="position: relative"><noscript><a href="#"><img alt="Dashboard ng Sukatan sa Pagkakapantay-pantay sa Bakuna " src="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1617137811229');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> <p class="small-text">Tandaan: Ang Sukatan sa Pagkakapantay-pantay sa Bakuna ay para lang sa lingguhang paglalaan ng pagbabakuna at layunin ng pag-uulat. Ang mga nakuha ng CDPH na quartile ay hindi dapat ituring na nagsasaad ng HPI score para sa mga zip code na ito. Ang mga nakuha ng CDPH na quartile ay itinalaga sa mga zip code na hindi kasama sa HPI score na binuo ng Alyansa ng Pampublikong Kalusugan ng Southern California (Public Health Alliance of Southern California) dahil sa mga alalahanin sa istatistikal na pagiging mapagkakatiwalaan at validity sa mga populasyong wala pang 1,500 o kung saan mahigit sa 50% ng populasyon ang nakatira sa isang pangkatang setting.</p>
+</div>
+
+
+
+<h4>Mga pagbabakuna ayon sa dami at porsyento ng mga taong nabakunahan sa bawat quartile sa ngayon </h4>
 
 
 
@@ -668,7 +681,7 @@
           <li data-label="chartDescription">Mga taong hindi pa nakakakumpleto at nakakumpleto na ng pagpapabakuna sa California</li>
           <li data-label="legendLabel1">Mga taong edad 16+ na hindi pa nakakakumpleto ng pagpapabakuna</li>
           <li data-label="legendLabel2">Mga taong edad 16+ na nakakumpleto na ng pagpapabakuna</li>
-          <li data-label="barLabel">HPI Quartile {N}</li>
+          <li data-label="barLabel">Quartile {N}</li>
           <li data-label="annotationLeast">Mga kondisyon ng komunidad na may pinaka-hindi maayos na kalusugan</li>
           <li data-label="annotationMost">Mga kondisyon ng komunidad na may pinakamaayos na kalusugan</li>
           <li data-label="footerText">Na-update noong {PUBLISHED_DATE} na may data mula {LATEST_ADMINISTERED_DATE}.  Ang “Hindi pa nakakakumpleto ng pagbabakuna” ay tumutukoy sa mga indibiduwal na nakatanggap na ng hindi bababa sa isang dosis ng bakuna ng Pfizer o Moderna. Ang “Nakakumpleto na ng pagbabakuna” ay tumutukoy sa mga indibiduwal na nakatanggap na ng dalawang dosis ng bakuna ng Pfizer o Moderna, o isang dosis ng bakuna ng Janssen. Porsyento para sa bilang ng mga tao na kinalkula bilang mga taong nabakunahan sa isang quartile at hinati ayon sa populasyon ng mga taong edad 16 pataas sa isang quartile.</li>
@@ -677,8 +690,8 @@
           <li data-label="chartTitle">Mga bakunang naibigay ayon sa dosis</li>
           <li data-label="chartDescription">Bilang ng dosis ng bakuna na naibigay sa California</li>
           <li data-label="legendLabel1">% ng kabuuan at bilang ng dosis na naibigay</li>
-          <li data-label="barLabel">HPI Quartile {N}</li>
-          <li data-label="annotationLeast">Mga kondisyon ng komunidad na may pinaka-hindi maayos na kalusugan</li>
+          <li data-label="barLabel">Quartile {N}</li>
+          <li data-label="annotationLeast">Mga kondisyon ng komunidad na may pinakahindi maayos na kalusugan</li>
           <li data-label="annotationMost">Mga kondisyon ng komunidad na may pinakamaayos na kalusugan</li>
           <li data-label="footerText">Na-update noong {PUBLISHED_DATE} na may data mula {LATEST_ADMINISTERED_DATE}. Hindi kasama ang mga dosis na walang HPI score, kasama ang mga residente sa labas ng estado o mga rekord na walang zip code. Porsyento para sa mga dosis na kinalkula bilang dosis na naibigay sa isang a quartile at hinati ayon sa kabuuang dosis na naibigay sa buong estado.</li>
         </ul>       </cagov-chart-vaccines-hpi-by-dose>   </div>
