--- a/vi/vaccines/index.html
+++ b/vi/vaccines/index.html
@@ -152,7 +152,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vắc-xin</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 3, 2021 lúc 17:02</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 3, 2021 lúc 16:13</p>
           
         </div>
       </div>
@@ -640,15 +640,11 @@
 
 
 
-<p>Ban đầu, chủng ngừa được giới hạn ở các nhân viên chăm sóc sức khỏe và cư dân tại các cơ sở chăm sóc dài hạn. Do đó, dữ liệu phản ánh nhóm dân số đó hơn là những cư dân khác tại California.</p>
-
-
-
-<p>Các bảng này báo cáo tiến trình tiêm vắc-xin của quận cư trú. Nếu không báo cáo quận cư trú thì sử dụng quận tiêm vắc-xin. Quy định này áp dụng cho dưới 1% hồ sơ chủng ngừa. Tổng số người chủng ngừa ở cấp quận không bằng tổng số người chủng ngừa trên toàn tiểu bang do một số cư dân ngoại bang đã chủng ngừa tại California.</p>
-
-
-
 <h3 id="Vaccine-administration-by-county-of-residence">Tiêm vắc-xin theo quận cư trú</h3>
+
+
+
+<p>Bảng này báo cáo tiến trình tiêm vắc-xin theo quận cư trú. Nếu không báo cáo quận cư trú thì sử dụng quận tiêm vắc-xin. Quy định này áp dụng cho dưới 1% hồ sơ chủng ngừa. Tổng số người chủng ngừa ở cấp quận không bằng tổng số người chủng ngừa trên toàn tiểu bang do một số cư dân ngoại bang đã chủng ngừa tại California.</p>
 
 
 
@@ -656,21 +652,38 @@
 
 
 
-<h3 class="pt-5">Chủng ngừa và điều kiện sức khỏe cộng đồng (Chỉ Số Công Bằng Vắc-xin)</h3>
+<h3>Chủng ngừa và điều kiện sức khỏe cộng đồng (Chỉ Số Công Bằng Vắc-xin)</h3>
 
-<p>Biểu đồ này so sánh chủng ngừa COVID-19 trong số bốn cấp độ sức khỏe cộng đồng khác nhau. </p>
 
-<p>Biểu đồ sử dụng các biện pháp Chỉ Số Địa Điểm Khỏe Mạnh (Healthy Places Index, HPI) của Liên Minh Y Tế Công Cộng Nam California trong khu vực mã bưu chính có thể ảnh hưởng đến sức khỏe như thu nhập, giáo dục và khả năng tiếp cận dịch vụ chăm sóc sức khỏe. Sau đó, các khu vực được cho điểm từ các điều kiện sức khỏe cộng đồng kém nhất (Điểm tứ phân vị 1) cho đến các điều kiện sức khỏe cộng đồng tốt nhất (Điểm tứ phân vị 4). Chỉ Số Công Bằng vắc-xin cũng tạo điểm số cho các khu vực không có điểm HPI. </p><p>   Dữ liệu dưới đây thể hiện tiến trình chủng ngừa ở mỗi một trong bốn điểm tứ phân vị. </p>
+
+<p>Những biểu đồ này so sánh chủng ngừa COVID-19 trong bốn cấp độ sức khỏe cộng đồng khác nhau.</p>
+
+
+
+<p>Chỉ Số Công Bằng Vắc-xin kết hợp kết quả Chỉ Số Địa Điểm Khỏe Mạnh (Healthy Places Index, HPI) của Liên Minh Y Tế Công Cộng Nam California và các điểm do CDPH đưa ra để dự đoán các yếu tố ảnh hưởng đến sức khỏe như thu nhập, giáo dục và khả năng tiếp cận dịch vụ chăm sóc sức khỏe. Mã bưu chính có phạm vi từ các điều kiện cộng đồng kém khỏe mạnh hơn trong Góc Phần Tư 1 đến các điều kiện cộng đồng khỏe mạnh hơn trong Góc Phần Tư 4.</p>
+
+
+
+<h4>Tỷ lệ dân số được tiêm vắc-xin hàng tuần theo góc phần tư</h4>
+
+
+
+<div class="col-lg-10 mx-auto"> <!-- Tableau embed for "Weekly percent of vaccinated people by HPI quartile"--> <div class="tableauPlaceholder" id="viz1617137811229" style="position: relative"><noscript><a href="#"><img alt="Bảng Dữ Liệu Chỉ Số Công Bằng Vắc-xin " src="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineEquityMetricQuartileDashboard/VaccineEquityMetricDashboard/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1617137811229');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='527px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> <p class="small-text">Lưu ý: Chỉ Số Công Bằng Vắc-xin chỉ phục vụ mục đích phân bổ và báo cáo chủng ngừa hàng tuần. Không nên coi các góc phần tư do CDPH đưa ra là chỉ báo về điểm HPI đối với những mã bưu chính này. Các góc phần tư do CDPH đưa ra được chỉ định các mã bưu chính không được bao gồm trong điểm HPI do Liên Minh Y Tế Công Cộng Nam California lập ra vì những mối quan ngại về độ tin cậy và giá trị của thống kê trong các nhóm dân dưới 1,500 người hoặc nơi có hơn 50% dân số cư trú trong môi trường tập thể.</p>
+</div>
+
+
+
+<h4>Chủng ngừa theo số lượng và tỷ lệ người được tiêm vắc-xin góc trong mỗi góc phần tư tính đến nay </h4>
 
 
 
 <div class="container">
   <div class="row">       <cagov-chart-vaccines-hpi-by-people class="chart">         <ul class="d-none">
-          <li data-label="chartTitle">Chửng ngừa theo số người được chủng ngừa</li>
+          <li data-label="chartTitle">Chủng ngừa theo số người được chủng ngừa</li>
           <li data-label="chartDescription">Những người được chủng ngừa một phần và đầy đủ tại California</li>
           <li data-label="legendLabel1">Người từ 16 tuổi trở lên được chủng ngừa một phần</li>
           <li data-label="legendLabel2">Người từ 16 tuổi trở lên được chủng ngừa đầy đủ</li>
-          <li data-label="barLabel">Điểm tứ phân vị HPI {N}</li>
+          <li data-label="barLabel">Góc Phần Tư {N}</li>
           <li data-label="annotationLeast">Các điều kiện sức khỏe cộng đồng kém nhất</li>
           <li data-label="annotationMost">Các điều kiện sức khỏe cộng đồng tốt nhất</li>
           <li data-label="footerText">Đã cập nhật {PUBLISHED_DATE} với dữ liệu từ {LATEST_ADMINISTERED_DATE}.  “Chủng ngừa một phần” dành cho những cá nhân đã nhận được ít nhất một liều vắc-xin Pfizer hoặc Moderna. “Chủng ngừa đầy đủ” dành cho những cá nhân đã nhận được hai liều vắc-xin Pfizer hoặc Moderna, hoặc một liều vắc-xin Jansen. Tỷ lệ phần trăm số người được tính là người được chủng ngừa trong một điểm tứ phân vị chia cho số dân từ 16 tuổi trở lên trong một điểm tứ phân vị.</li>
@@ -679,7 +692,7 @@
           <li data-label="chartTitle">Chủng ngừa theo liều đã tiêm</li>
           <li data-label="chartDescription">Số liều vắc-xin được tiêm tại California</li>
           <li data-label="legendLabel1">% tổng số và số liều đã tiêm</li>
-          <li data-label="barLabel">Điểm tứ phân vị HPI {N}</li>
+          <li data-label="barLabel">Góc Phần Tư {N}</li>
           <li data-label="annotationLeast">Các điều kiện sức khỏe cộng đồng kém nhất</li>
           <li data-label="annotationMost">Các điều kiện sức khỏe cộng đồng tốt nhất</li>
           <li data-label="footerText">Đã cập nhật {PUBLISHED_DATE} với dữ liệu từ {LATEST_ADMINISTERED_DATE}. Không bao gồm các liều không có điểm HPI, kể cả cư dân ngoài tiểu bang hoặc hồ sơ thiếu mã bưu điện. Tỷ lệ phần trăm số liều được tính là liều đã tiêm trong một điểm tứ phân vị chia cho tổng số liều đã tiêm trên toàn tiểu bang.</li>
