Update page - healthcorps.html 65e8ce7e19d33f724aee9c7d2f4003a412b6cd43

--- a/healthcorps/index.html
+++ b/healthcorps/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California Health Corps</h1>
           
-            <p class="small-text">Last updated&nbsp;March 9, 2021 at 5:28 PM</p>
+            <p class="small-text">Last updated&nbsp;April 1, 2021 at 10:43 AM</p>
           
         </div>
       </div>
@@ -245,7 +245,7 @@
 
 
 
-<ul><li>Health Corps FAQ: <a href="https://files.covid19.ca.gov/pdf/FAQ-Health-Corps.pdf" class="pdf">FAQ-Health-Corps</a></li><li>Travel Reimbursement FAQ: <a href="https://files.covid19.ca.gov/pdf/FAQ-Travel-Reimbursement.pdf" class="pdf">FAQ-Travel-Reimbursement</a></li><li>SNF Orientation: <a href="https://files.covid19.ca.gov/pdf/SNF-Nursing-Staff-Orientation.pdf" class="pdf">SNF-Nursing-Staff-Orientation </a></li><li>How to file a complaint: <a href="https://files.covid19.ca.gov/pdf/How-to-file-a-complaint.pdf" class="pdf">How-to-file-a-complaint</a></li><li>Direct deposit: <a href="https://files.covid19.ca.gov/pdf/std699-Direct-Deposit.pdf" class="pdf">Std699-Direct-Deposit</a></li><li>Travel expense claim: <a href="https://files.covid19.ca.gov/pdf/Std262-Travel-Expense-Claim.pdf" class="pdf">Std262-Travel-Expense-Claim</a></li><li>Employee Action Request: <a href="https://files.covid19.ca.gov/pdf/std686-Employee-Action-Request.pdf" class="pdf">Std686-Employee-Action-Request.pdf</a></li></ul>
+<ul><li>Health Corps FAQ: <a class="pdf" href="https://files.covid19.ca.gov/pdf/FAQ-Health-Corps.pdf">FAQ-Health-Corps</a></li><li>Travel Reimbursement FAQ: <a class="pdf" href="https://files.covid19.ca.gov/pdf/FAQ-Travel-Reimbursement.pdf">FAQ-Travel-Reimbursement</a></li><li>SNF Orientation: <a class="pdf" href="https://files.covid19.ca.gov/pdf/SNF-Nursing-Staff-Orientation.pdf">SNF-Nursing-Staff-Orientation </a></li><li>How to file a complaint: <a class="pdf" href="https://files.covid19.ca.gov/pdf/How-to-file-a-complaint.pdf">How-to-file-a-complaint</a></li><li>Direct deposit: <a class="pdf" href="https://files.covid19.ca.gov/pdf/std699-Direct-Deposit.pdf">Std699-Direct-Deposit</a></li><li>Travel expense claim: <a class="pdf" href="https://files.covid19.ca.gov/pdf/Std262-Travel-Expense-Claim.pdf">Std262-Travel-Expense-Claim</a></li><li>Employee Action Request: <a class="pdf" href="https://files.covid19.ca.gov/pdf/std686-Employee-Action-Request.pdf">Std686-Employee-Action-Request</a></li></ul>
 
 
 
@@ -257,7 +257,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>What is California Health Corps?&nbsp;</h4>
+            <h3>What is California Health Corps?&nbsp;</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -280,7 +280,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>How does California Health Corps work?&nbsp;</h4>
+            <h3>How does California Health Corps work?&nbsp;</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -303,7 +303,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>What can my role be in California Health Corps?</h4>
+            <h3>What can my role be in California Health Corps?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -326,7 +326,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Can a doctor with an out-of-state license work for California Health Corps? How about foreign medical graduates without California licenses?</h4>
+            <h3>Can a doctor with an out-of-state license work for California Health Corps? How about foreign medical graduates without California licenses?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -354,7 +354,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>What are the pay and benefits for California Health Corps professionals?</h4>
+            <h3>What are the pay and benefits for California Health Corps professionals?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -377,7 +377,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Some healthcare professions are not listed. Are members of those professions&nbsp;eligible to work for California Health Corps?</h4>
+            <h3>Some healthcare professions are not listed. Are members of those professions&nbsp;eligible to work for California Health Corps?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -400,7 +400,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>When can I expect a response after completing my California Health Corps registration?</h4>
+            <h3>When can I expect a response after completing my California Health Corps registration?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -423,7 +423,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>How do I return to the California Health Corps application after logging out?</h4>
+            <h3>How do I return to the California Health Corps application after logging out?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
